--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
 	<br/><br/>
 
 	<label>Number Of Days: </label>
-	<input type="Number" name="NumberfDays" id="txtNumberOfDays" value="300">
+	<input type="Number" name="NumberfDays" id="txtNumberOfDays" value="10">
 	<br/><br/>
 
 	<label>Country Code: </label>
 	<input type="Country" name="CountryCode" id="txtCountryCode" value="EC">
 	<br/><br/>
-	<input type="button" name="" id="btnExecute" value="Execute!">
-
-
+	<input type="button" name="" id="btnExecute" value="Execute!" onclick="set_calendar()">
 	<hr>
-
+	
 	<div id="ini-calendar">
 		
     </div>
