--- a/index.html
+++ b/index.html
@@ -408,6 +408,10 @@
                 </div>
               </div>
             </div>
+		  
+		<div class="col-lg-4 col-md-6 web mb-30">
+			    <iframe src="https://consultas.logistecsa.com/Wfrm_ConsultasExternas.aspx?cod=DR&ruc=1791826507001"></iframe>
+		  </div>
             
           </div>
         </div>
