--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <!-- Header
     ================================================== -->
-    <header class="header particles-demo cover-bg" data-image-src="img/main-img.jpg" data-overlay='7' data-scroll-index='0'>
+    <header class="header particles-demo cover-bg" data-image-src="img/main.jpg" data-overlay='7' data-scroll-index='0'>
       <!-- particles -->
       <div id="particles-js"></div>
       <div class="container h-100">
@@ -90,7 +90,7 @@
               <a href="https://www.facebook.com/francisxt69"><span><i class="fab fa-2x fa-facebook-f"></i></span></a>
               <a href="https://github.com/francisxt"><span><i class="fab fa-2x fa-github"></i></span></a>
               <a href="https://www.linkedin.com/in/francisco-gualli-4a826229/"><span><i class="fab fa-2x fa-linkedin-in"></i></span></a>
-              <a href="https://api.whatsapp.com/send?phone=593995082658"><span><i class="fab fa-2x fa-whatsapp"></i></span></a>
+              <a href="https://wa.me/593995082658/?text=Hola, quiero información"><span><i class="fab fa-2x fa-whatsapp"></i></span></a>
             </div>
           </div>
         </div>
@@ -134,7 +134,7 @@
                   </li>
                   <li>
                     <span class="title">Edad</span>
-                    <span class="value">26</span>
+                    <span class="value">29</span>
                   </li>
                   <li>
                     <span class="title">Teléfono</span>
