--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
     <!-- End Navbar
     ================================================== -->
 
-
     <!-- Header
     ================================================== -->
     <header class="header particles-demo cover-bg" data-image-src="img/main.jpg" data-overlay='7' data-scroll-index='0'>
@@ -80,14 +79,12 @@
       <div id="particles-js"></div>
       <div class="container h-100">
         <div class="row align-items-center h-100">
-
           <div class="col-12 caption">
             <h4>Hola, soy <span>Francisco Gualli</span></h4>
             <h2 class="mt-20 mb-20">Soy <span></span></h2>
             <p class="mt-20">Superando los limites</p>
-
             <div class="scoial-icon mt-20 text-center">
-              <a href="https://www.facebook.com/francisxt69"><span><i class="fab fa-2x fa-facebook-f"></i></span></a>
+              <a href="https://www.facebook.com/franciscoguallidev"><span><i class="fab fa-2x fa-facebook-f"></i></span></a>
               <a href="https://github.com/francisxt"><span><i class="fab fa-2x fa-github"></i></span></a>
               <a href="https://www.linkedin.com/in/francisco-gualli-4a826229/"><span><i class="fab fa-2x fa-linkedin-in"></i></span></a>
               <a href="https://wa.me/593995082658/?text=Hola, quiero información"><span><i class="fab fa-2x fa-whatsapp"></i></span></a>
@@ -466,7 +463,6 @@
               </div>
             </div>
           </div>
-
           <div class="col-md-12">
             <div class="contact-form">
               <form class='form' id='contact-form' data-toggle='validator' method='post'><input type='hidden' name='form-name' value='contact-form' />
@@ -479,35 +475,29 @@
                         <div class="help-block with-errors"></div>
                       </div>
                     </div>
-
                     <div class="col-md-6">
                       <div class="form-group">
                           <input id="form_email" type="email" name="email" placeholder="Email *" required="required" data-error="Ingresa un correo electronico valido">
                           <div class="help-block with-errors"></div>
                       </div>
                     </div>
-
                     <div class="col-md-12">
                       <div class="form-group">
                           <input id="form_subject" type="text" name="subject" placeholder="Motivo">
                       </div>
                     </div>
-
                     <div class="col-md-12 form-group">
                       <textarea id="form_message" name="text" class="form-control" placeholder=" Ingresa tu mensaje " required="required" data-error="Se debe agregar el mensaje"></textarea>
                       <div class="help-block with-errors"></div>
                     </div>
-
                     <div class="col-md-12">
                       <button class="btn"><span>Enviar Mensaje</span></button>
                     </div>
-
                   </div>
                 </div>
               </form>
             </div>
           </div>
-
         </div>
       </div>
     </section>
@@ -520,11 +510,9 @@
     <footer class="footer text-center">
       <div class="container">
         <div class="row">
-
           <div class="logo">
             <img src="img/logo-2.png" alt="logo" class="logo-1">
           </div>
-
           <div class="scoial-icon text-center">
             <a href="https://www.facebook.com/francisxt69"><span><i class="fab fa-facebook-f"></i></span></a>
             <a href="https://www.linkedin.com/in/francisco-gualli-4a826229/"><span><i class="fab fa-linkedin-in"></i></span></a>
@@ -553,6 +541,5 @@
     <script src="js/app.js"></script>
     <script src="js/validator.js"></script>
     <script src="js/custom.js"></script>
-
   </body>
 </html>
